Added images and basic javascript

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
   <body>
     <!-- Users see content here -->
     <header>
-      <h1>Bee Conscious</h1>
+      <h1>Honey, Bee Conscious</h1>
+
+      <h2>
+        <script src=script.js></script>
+      </h2>
 
       <div class="topnav">
           <a class="active" href="#home">Home</a>
           <a href="#news">Education</a>
           <a href="#contact">Resources</a>
           <a href="#beestore">Bee Store</a>
-          <a href="#about">Donate</a>
-        </div>
+          <a href="#about">Donate</a> 
+      </div>
 
 
       <!-- 
