Created while and for loops along with notes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-'<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
  <head>
     <title>Bee Conscious</title>
@@ -21,42 +21,6 @@
           <a href="#beestore">Bee Store</a>
           <a href="#about">Donate</a> 
       </div>
-
-
-      <!-- 
-      <div class="topnav">
-        
-          <ul>
-           <li><a href="">Home</a></li>
-
-           <li><a href="">Education</a>
-            <ul>
-              <li><a href="">What is a hive?</a></li>
-              <li><a href="">Bee Identification</a></li>
-              <li><a href="">Current Trends</a></li>
-            </ul>
-           </li>
-
-           <li><a href="">Resources</a>
-            <ul>
-                <li><a href="">How bees affect you</a></li>
-                <li><a href="">Bee Advocacy</a></li>
-                <li><a href="">Local Apiarist Groups</a></li>
-              </ul>
-           </li>
-
-           <li><a href="">Bee Store</a>
-            <ul>
-                <li><a href="">Local Honey</a></li>
-                <li><a href="">Clothes</a></li>
-                <li><a href="">Bee Hive Equipment</a></li>
-              </ul>
-          </li>
-
-            <li><a href="">Donate</a></li>
-           </ul>
-        
-      </div> -->
     </header>
 
 
